@@ -261,7 +261,7 @@ err-if-output -t "Use MPFR_TMP_LIMBS_ALLOC" \
   grep 'MPFR_TMP_ALLOC.*\(BYTES_PER_MP_LIMB\|sizeof.*mp_limb_t\)' src/*.c
 
 # Use simple mp_limb_t constants: MPFR_LIMB_ZERO, MPFR_LIMB_ONE, etc.
-grep '(mp_limb_t) *-\?[01]' $srctests | grep -v '#define MPFR_LIMB_' | \
+grep '(mp_limb_t) *-\?[01][^0-9]' $srctests | grep -v '#define MPFR_LIMB_' | \
   grep -v 'MPFR_ASSERTN *(MPFR_MANT.*== *(mp_limb_t)' | \
   err-if-output -t "Use simple mp_limb_t constants" cat
 
