@@ -24,6 +24,9 @@ Changes from versions 4.0.* to version 4.1.0:
 - The "..." release.
 - Improved __GMP_CC and __GMP_CFLAGS retrieval (in particular for MS Windows).
 - Bug fixes.
+- New: optional "make check-exported-symbols", mainly for the MPFR developers
+  and binary distributions, to check that MPFR does not define symbols with a
+  GMP reserved prefix (experimental).
 
 Changes from versions 3.1.* to version 4.0.0:
 - The "dinde aux marrons" release.
